SUBDIRS = boilerplate

if XENO_COBALT
SUBDIRS += cobalt
else
SUBDIRS += mercury
endif

SUBDIRS +=		\
	copperplate	\
	smokey		\
	alchemy		\
	vxworks		\
	psos

if XENO_COBALT
SUBDIRS += 		\
	analogy		\
	trank
endif

DIST_SUBDIRS = 		\
	alchemy		\
	analogy		\
	boilerplate	\
	cobalt		\
	copperplate	\
	mercury		\
	psos		\
	smokey		\
	trank		\
	vxworks
